Added form link in the dropdown and Get Started button

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
           <li><a href="dashboard.html" aria-label="Go to Dashboard">Dashboard</a></li>
           <li><a href="validation.html" aria-label="Go to Validation Page">Validation</a></li>
           <li><a href="schedule.html" aria-label="Go to Schedule">Schedule</a></li>
+          <!-- NEW LINK TO form.html -->
+          <li><a href="form.html" aria-label="Go to Form Page">Form</a></li>
         </ul>
       </li>
     </ul>
@@ -43,7 +45,7 @@
     <section>
       <h2>Get Started</h2>
       <p>Plan and optimize your study schedule with our smart scheduler!</p>
-      <!-- We'll use an event listener in script.js to redirect to form.html -->
+      <!-- "Get Started" button that redirects to form.html (handled in script.js) -->
       <button
         id="get-started"
         class="animate-pulse"
@@ -53,14 +55,14 @@
       </button>
     </section>
 
-    <!-- Upcoming Study Sessions (from c4ef016 version) -->
+    <!-- Upcoming Study Sessions -->
     <section>
       <h2>Upcoming Study Sessions</h2>
       <button id="view-sessions">View Study Sessions</button>
       <div id="study-list"></div>
     </section>
 
-    <!-- Features (from c4ef016 version) -->
+    <!-- Features -->
     <section>
       <h2>Features</h2>
       <ul>
@@ -70,7 +72,7 @@
       </ul>
     </section>
 
-    <!-- FETCH DATA FROM JSON (Study Tips) (HEAD version) -->
+    <!-- FETCH DATA FROM JSON (Study Tips) -->
     <section>
       <h2>Study Tips</h2>
       <div id="tips-container" aria-live="polite"></div>
