Updates from instructor feedback

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,7 +12,7 @@
     <h1>Study Dashboard</h1>
   </header>
 
-  <!-- NAVIGATION (Drop-Down Menu) -->
+  <!-- NAVIGATION (Burger Menu) -->
   <nav class="navbar">
     <div class="nav-brand">Smart Scheduler</div>
     <button class="burger" aria-label="Menu">&#9776;</button>
@@ -35,9 +35,7 @@
     <!-- Data Fetch Example: Motivational Quotes or Study Tips -->
     <section>
       <h2>Motivational Quotes</h2>
-      <div id="quotes-container">
-        <!-- Fetched quotes will appear here -->
-      </div>
+      <div id="quotes-container"></div>
       <button id="refresh-quotes" class="pulse-button">Refresh Quotes</button>
     </section>
 
@@ -63,7 +61,7 @@
     <p>&copy; 2025 Smart Study Scheduler. All rights reserved.</p>
   </footer>
 
-  <!-- SCRIPT (Import as module) -->
+  <!-- SCRIPT -->
   <script type="module" src="dashboard.js"></script>
 </body>
 </html>
