--- a/public/schedule.html
+++ b/public/schedule.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Smart Study Scheduler - Schedule</title>
-  <link rel="stylesheet" href="schedule.css">
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="styles.css">
+  <!-- FullCalendar CSS (CDN) -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css"
+  />
 </head>
 <body>
   <header>
@@ -23,13 +29,18 @@
   </nav>
 
   <main>
-    <p>This page is currently blank. You can put advanced scheduling or calendar logic here.</p>
+    <p>This page shows your scheduled tasks on a calendar.</p>
+    <!-- CALENDAR CONTAINER -->
+    <div id="calendar"></div>
   </main>
 
   <footer>
     <p>&copy; 2025 Smart Study Scheduler. All rights reserved.</p>
   </footer>
 
+  <!-- FullCalendar JS (CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+  <!-- Your custom JS -->
   <script src="schedule.js"></script>
 </body>
 </html>
